--- a/Book/Book.csproj
+++ b/Book/Book.csproj
@@ -88,12 +88,21 @@
     <Compile Include="BookPage.xaml.cs">
       <DependentUpon>BookPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BookPageStudent.xaml.cs">
+      <DependentUpon>BookPageStudent.xaml</DependentUpon>
+    </Compile>
     <Compile Include="BookTest.cs">
       <DependentUpon>BaseModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Manager.cs" />
+    <Compile Include="PageStudent.xaml.cs">
+      <DependentUpon>PageStudent.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Predmet.cs">
       <DependentUpon>BaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ProsmotrPageStudent.xaml.cs">
+      <DependentUpon>ProsmotrPageStudent.xaml</DependentUpon>
     </Compile>
     <Compile Include="So_Autor.cs">
       <DependentUpon>BaseModel.tt</DependentUpon>
@@ -112,6 +121,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="BookPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="BookPageStudent.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -134,6 +147,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PageStudent.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ProsmotrPageStudent.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
