Исправлено отображение преподавателя.

--- a/Book/App.config
+++ b/Book/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="BookBaseEntities" connectionString="metadata=res://*/BaseModel.csdl|res://*/BaseModel.ssdl|res://*/BaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-MORE10N\STP;initial catalog=BookBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BookBaseEntities1" connectionString="metadata=res://*/BookBase.csdl|res://*/BookBase.ssdl|res://*/BookBase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-MORE10N\STP;initial catalog=BookBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
